# CocoLib

./: CMakeLists.txt
Source/: BufferStatus.h  CMakeLists.txt  COBS.cpp  COBS.h  CircularBuffer.h  FIRFilter.h  Interpolator.h  MovingAverageFilter.h  SoftTimer.cpp  SoftTimer.h  TimerInterface.h
Tests/: CMakeLists.txt  COBSTests.cpp  CircularBufferTests.cpp  FIRFilterTests.cpp  InterpolatorTests.cpp  LockFreeCircularBufferTests.cpp  MockTimer.cpp  MockTimer.h  MovingAverageFilterTests.cpp  SoftTimerTests.cpp  main.cpp
